--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -1,3 +1,7 @@
+---
+import Links from "../components/Links.astro";
+---
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -24,7 +28,10 @@
         <title>thrizzle</title>
     </head>
     <body class="min-h-screen flex flex-col gap-2 justify-center items-center">
-        <slot />
+        <main class="w-1/3">
+            <slot />
+            <Links />
+        </main>
     </body>
 </html>
 
