--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,16 @@
 ---
 import HTML from "../layouts/HTML.astro";
-import Links from "../components/Links.astro";
 ---
 
 <HTML>
-    <main class="w-1/3">
-        <p>thrzl</p>
-        <p>
-            research + development @ <a href="https://ey3.tech"
-                >ey3 technologies</a
-            >
-        </p>
-        <p>
-            see more of my work on <a href="https://github.com/thrzl">github</a>
-        </p>
-        <Links />
-        <!-- <section class="mt-4">
+    <p>thrzl</p>
+    <p>
+        research + development @ <a href="https://ey3.tech">ey3 technologies</a>
+    </p>
+    <p>
+        see more of my work on <a href="https://github.com/thrzl">github</a>
+    </p>
+    <!-- <section class="mt-4">
             <span class="text-wrap break-words whitespace-nowrap">
                 <a href="https://age-encryption.org">age public key</a>: <p
                     class="font-mono cursor-text text-size-[0.8rem] my-0"
@@ -24,5 +19,4 @@ import Links from "../components/Links.astro";
                 </p>
             </span>
         </section> -->
-    </main>
 </HTML>
