feat: add contact page

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -3,6 +3,7 @@ const links = {
     about: "/",
     // blog: "/blog",
     projects: "/projects",
+    contact: "/contact",
     // work: "/work",
     // tunes: "/tunes",
 };
