--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -27,7 +27,10 @@ import Links from "../components/Links.astro";
         <meta name="generator" content={Astro.generator} />
         <title>thrizzle</title>
     </head>
-    <body class="min-h-screen flex flex-col gap-2 justify-center items-center">
+    <body
+        class="min-h-screen flex flex-col gap-2 justify-center items-center"
+        style="background-color: #e9e7d7"
+    >
         <main class="w-1/3">
             <slot />
             <Links />
