--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -31,7 +31,7 @@ import Links from "../components/Links.astro";
         class="min-h-screen flex flex-col gap-2 justify-center items-center"
         style="background-color: #e9e7d7"
     >
-        <main class="w-1/3">
+        <main class="w-4/5 md:w-1/3">
             <slot />
             <Links />
         </main>
