--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,6 +7,6 @@ import HTML from "../layouts/HTML.astro";
     <p>email [ hi at thrzl dot xyz ]</p>
     <div class="mb-4">
         <p class="mb-1">age public key:{" "}</p><pre
-            class="my-0">age17kxed6vqrqpwwjcu7kt5vmzxtufm49295zczzhkr2wz96xke8vastqwsga</pre>
+            class="my-0 text-wrap break-words">age17kxed6vqrqpwwjcu7kt5vmzxtufm49295zczzhkr2wz96xke8vastqwsga</pre>
     </div>
 </HTML>
