--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -1,5 +1,12 @@
 ---
-import Links from "../components/Links.astro";
+import Nav from "../components/Nav.astro";
+
+import { getAlbum } from "../lib/musicData";
+import { getColors } from "../lib/musicData";
+import { getPalette } from "../lib/colors";
+const album = await getAlbum();
+const palette = getPalette(await getColors(album));
+const { dominant, textColor, secondaryTextColor } = palette;
 ---
 
 <html lang="en">
@@ -27,54 +34,46 @@ import Links from "../components/Links.astro";
         <meta name="generator" content={Astro.generator} />
         <title>thrizzle</title>
     </head>
-    <body
-        class="min-h-screen flex flex-col gap-2 justify-center items-center"
-        style="background-color: #e9e7d7"
-    >
+    <body class="min-h-screen flex flex-col gap-2 justify-center items-center">
         <main class="w-4/5 md:w-1/3">
-            <slot />
-            <Links />
+            <slot album={album} />
+            <Nav />
         </main>
     </body>
 </html>
 
-<style is:global>
+<style
+    is:global
+    define:vars={{
+        dominant,
+        textColor,
+        secondaryTextColor,
+        accent: palette.palette[0],
+    }}
+>
     * {
         box-sizing: border-box;
         cursor: default;
     }
     body {
         font-family: "Helvetica Neue", sans-serif;
+        background-color: var(--dominant, #e9e7d7);
+        color: var(--textColor, black);
     }
     a[data-active="true"],
     a:hover {
-        background-color: blue;
-        color: white;
+        background-color: var(--accent, blue);
+        color: var(--secondaryTextColor, white);
         cursor: pointer;
     }
+    .link-arrow {
+        color: var(--accent, blue);
+    }
     a {
-        color: blue;
+        color: var(--accent, blue);
     }
     a[href^="http"] {
         white-space: nowrap;
         text-wrap: wrap;
-    }
-
-    a[href^="http"]:hover::after {
-        filter: invert(1);
-    }
-    a[href^="http"]::after {
-        color: blue;
-        content: url("../assets/link.svg");
-        display: inline-block;
-        font-style: normal;
-        font-size: 0.5em;
-        position: relative;
-        margin-left: 0.1em;
-        -webkit-text-decoration: none;
-        text-decoration: none;
-        white-space: nowrap;
-        text-wrap: nowrap;
-        vertical-align: -0.2rem;
     }
 </style>
