fix: use link component for all links on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,14 @@ const album = await getAlbum();
 <HTML>
     <p>thrzl</p>
     <p>
-        research + development @ <a href="https://ey3.tech">ey3 technologies</a>
+        research + development @ <Link href="https://ey3.tech"
+            >ey3 technologies</Link
+        >
     </p>
     <p>
-        see more of my work on <a href="https://github.com/thrzl">github</a>
+        see more of my work on <Link href="https://github.com/thrzl"
+            >github</Link
+        >
     </p>
     {
         album && (
