fix: stop link underline from extending to arrow + better arrow placement

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -7,8 +7,8 @@ if (url !== "/" && url.endsWith("/")) {
 }
 ---
 
-<span>
-    <a {href} data-active={url === href}>
-        <slot />
-    </a>{href?.startsWith("http") && <Arrow class="link-arrow" />}</span
+<span class="inline-flex content-center items-center">
+    <a {href} data-active={url === href}><slot /></a>{
+        href?.startsWith("http") && <Arrow class="link-arrow" />
+    }</span
 >
