--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -34,9 +34,11 @@ const { dominant, textColor, secondaryTextColor } = palette;
         <meta name="generator" content={Astro.generator} />
         <title>thrizzle</title>
     </head>
-    <body class="min-h-screen flex flex-col gap-2 justify-center items-center">
+    <body
+        class="min-h-screen flex flex-col gap-2 justify-center items-center py-24"
+    >
         <main class="w-4/5 md:w-1/3">
-            <slot album={album} />
+            <slot />
             <Nav />
         </main>
     </body>
@@ -68,6 +70,9 @@ const { dominant, textColor, secondaryTextColor } = palette;
     }
     .link-arrow {
         color: var(--accent, blue);
+    }
+    a:hover .link-arrow {
+        color: var(--secondaryTextColor, white);
     }
     a {
         color: var(--accent, blue);
