feat: assign css variables

--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -61,6 +61,10 @@ const { dominant, textColor, secondaryTextColor } = palette;
         font-family: "Helvetica Neue", sans-serif;
         background-color: var(--dominant, #e9e7d7);
         color: var(--textColor, black);
+        --dominant: var(--dominant, #e9e7d7);
+        --textColor: var(--textColor, black);
+        --secondaryTextColor: var(--secondaryTextColor, white);
+        --accent: var(--accent, blue);
     }
     a[data-active="true"],
     a:hover {
