feat: add garden page

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,6 +4,7 @@ const links = {
     // blog: "/blog",
     projects: "/projects",
     contact: "/contact",
+    garden: "/garden",
     // work: "/work",
     // tunes: "/tunes",
 };
