--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,17 +1,18 @@
 ---
 import Arrow from "../assets/link.svg";
-const { href } = Astro.props;
+const { href, active } = Astro.props;
 let url = Astro.url.pathname;
 if (url !== "/" && url.endsWith("/")) {
     url = url.slice(0, -1);
 }
 let isExternal = href.startsWith("http");
+const isActive = url === href || (href !== "/" && url.startsWith(href));
 ---
 
 <span class="inline-flex content-center items-center cursor-pointer">
     <a
         {href}
-        data-active={url === href}
+        data-active={active ?? isActive}
         class={`decoration-none ${isExternal ? "pl-0.5" : "px-0.5"}`}
         ><span class="inline underline cursor-pointer"><slot /></span>{
             isExternal && <Arrow class="link-arrow cursor-pointer" />
