--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -13,7 +13,7 @@ const isActive = url === href || (href !== "/" && url.startsWith(href));
     <a
         {href}
         data-active={active ?? isActive}
-        class={`decoration-none ${isExternal ? "pl-0.5" : "px-0.5"}`}
+        class={`decoration-none ${isExternal ? "pl-0.5 -ml-0.5" : "px-0.5 -mx-0.5"}`}
         ><span class="inline underline cursor-pointer"><slot /></span>{
             isExternal && <Arrow class="link-arrow cursor-pointer" />
         }</a
