feat: automatically substitute component into MDX files

--- a/src/pages/garden/[...slug].astro
+++ b/src/pages/garden/[...slug].astro
@@ -56,7 +56,7 @@ const pubDate = dayjs(frontmatter.data.date);
         </p>
     </div>
     <div class="mb-4 line-height-normal">
-        <Content />
+        <Content components={{ a: Link }} />
     </div>
 </HTML>
 
