--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -58,7 +58,7 @@ if (frontmatter.data.image) {
         </p>
     </div>
     <div class="mb-4 line-height-normal">
-        <Content />
+        <Content components={{ a: Link }} />
     </div>
 </HTML>
 
