content: finish chiffrage.mdx

--- a/src/pages/garden/[...slug].astro
+++ b/src/pages/garden/[...slug].astro
@@ -68,4 +68,13 @@ const pubDate = dayjs(frontmatter.data.date);
     h2#footnote-label {
         text-transform: lowercase;
     }
+    blockquote {
+        padding: 0.1rem 1rem;
+        background-color: var(--accent);
+        margin: 0;
+        border-left: 2px solid var(--accent);
+    }
+    blockquote * {
+        color: var(--secondaryTextColor);
+    }
 </style>
