--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -70,4 +70,13 @@ if (frontmatter.data.image) {
     h2#footnote-label {
         text-transform: lowercase;
     }
+    blockquote {
+        padding: 0.1rem 1rem;
+        background-color: var(--accent);
+        margin: 0;
+        border-left: 2px solid var(--accent);
+    }
+    blockquote * {
+        color: var(--secondaryTextColor);
+    }
 </style>
