content: write other project pages

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -79,4 +79,8 @@ if (frontmatter.data.image) {
     blockquote * {
         color: var(--secondaryTextColor);
     }
+    pre {
+        padding: 0.5rem;
+        border-radius: 10px;
+    }
 </style>
