--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -6,13 +6,12 @@ if (url !== "/" && url.endsWith("/")) {
     url = url.slice(0, -1);
 }
 let isExternal = href.startsWith("http");
-const isActive = url === href || (href !== "/" && url.startsWith(href));
 ---
 
 <span class="inline-flex content-center items-center cursor-pointer">
     <a
         {href}
-        data-active={active ?? isActive}
+        data-active={active}
         class={`decoration-none ${isExternal ? "pl-0.5 -ml-0.5" : "px-0.5 -mx-0.5"}`}
         ><span class="inline underline cursor-pointer"><slot /></span>{
             isExternal && <Arrow class="link-arrow cursor-pointer" />
