fix: remove body margin

--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -65,6 +65,7 @@ const { dominant, textColor, secondaryTextColor } = palette;
         --textColor: var(--textColor, black);
         --secondaryTextColor: var(--secondaryTextColor, white);
         --accent: var(--accent, blue);
+        margin: 0;
     }
     a[data-active="true"],
     a:hover {
