fix: garden urls being wrong

--- a/src/pages/garden/index.astro
+++ b/src/pages/garden/index.astro
@@ -12,7 +12,7 @@ import dayjs from "dayjs";
         {
             posts.map((post) => (
                 <div class="my-4">
-                    <Link class="mb-0" href={`garden/${post.data.slug}`}>
+                    <Link class="mb-0" href={`/garden/${post.data.slug}`}>
                         {post.data.title}
                     </Link>{" "}
                     <span class="op-50">
