--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,8 +12,9 @@ import Encryptor from "@components/Encryptor.astro";
         <p class="mb-1">age public key:{" "}</p><pre
             class="my-0 text-wrap break-words">age17kxed6vqrqpwwjcu7kt5vmzxtufm49295zczzhkr2wz96xke8vastqwsga</pre>
         <p>
-            my <Link href="https://github.com/FiloSottile/age#post-quantum-keys"
-                >post-quantum</Link
+            my <Link
+                href="https://github.com/FiloSottile/age#post-quantum-keys"
+                showGithub={false}>post-quantum</Link
             > public key (preferred) can be found at <Link href="/pubkey-pq.txt"
                 >pubkey-pq.txt</Link
             >
