fix: make sure button and text are readable

--- a/src/components/Encryptor.astro
+++ b/src/components/Encryptor.astro
@@ -68,11 +68,11 @@ import "@fontsource-variable/geist-mono";
         placeholder="your message here"
         required
         id="plaintext"
-        class="w-full h-24 bg-dominant b-accent b-solid b-2 rounded-sm"
+        class="w-full h-24 bg-dominant b-accent text-text-color b-solid b-2 rounded-sm"
     ></textarea>
     <button
         type="submit"
-        class="w-full text-accent hover:bg-accent hover:text-secondary-text-color border-solid border-accent hover:border-accent text-[1rem] py-1 rounded-sm"
+        class="w-full bg-dominant text-accent hover:bg-accent hover:text-secondary-text-color border-solid border-accent hover:border-accent text-[1rem] py-1 rounded-sm"
         disabled>encrypt</button
     >
 </form>
