feat: add a little header thing

--- a/src/pages/garden/index.astro
+++ b/src/pages/garden/index.astro
@@ -6,7 +6,7 @@ import dayjs from "dayjs";
 ---
 
 <HTML>
-    <p>blog</p>
+    <h1>blog</h1>
     <p>a collection of notes. largely opinions or project logs</p>
     <div class="mb-4">
         {
