--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const album = await getAlbum();
 ---
 
 <HTML>
-    <p>thrzl</p>
+    <h1>thrzl</h1>
     <p>
         research + development @ <Link href="https://ey3.tech"
             >ey3 technologies</Link
