--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -48,7 +48,7 @@ const projects = await getCollection("projects");
 ---
 
 <HTML>
-    <p>featured projects</p>
+    <h1>featured projects</h1>
     {
         projects.map(({ data: project }) => (
             <div class="my-4">
