--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -86,4 +86,13 @@ const { dominant, textColor, secondaryTextColor } = palette;
         white-space: nowrap;
         text-wrap: wrap;
     }
+    h1 {
+        background-color: var(--accent, blue);
+        color: var(--secondaryTextColor, white);
+        font-size: 1rem;
+        margin: 0 -0.125rem;
+        padding: 0 0.125rem;
+        width: max-content;
+        font-weight: normal;
+    }
 </style>
