--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@ import Encryptor from "@components/Encryptor.astro";
 ---
 
 <HTML>
-    <p>contact</p>
+    <h1>contact</h1>
     <p>email [ hi at thrzl dot xyz ]</p>
     <div class="mb-4">
         <p class="mb-1">age public key:{" "}</p><pre
