--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import publicKey from "../../public/pubkey-pq.txt?raw";
 import Encryptor from "@components/Encryptor.astro";
 ---
 
-<HTML>
+<HTML title="contact" description="get in touch with me">
     <h1>contact</h1>
     <p>email [ hi at thrzl dot xyz ]</p>
     <div class="mb-4">
