--- a/src/pages/garden/index.astro
+++ b/src/pages/garden/index.astro
@@ -5,7 +5,10 @@ import { posts } from "@lib/garden";
 import dayjs from "dayjs";
 ---
 
-<HTML>
+<HTML
+    title="garden"
+    description="a collection of notes. largely opinions or project logs"
+>
     <h1>blog</h1>
     <p>a collection of notes. largely opinions or project logs</p>
     <div class="mb-4">
