--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { getAlbum } from "../lib/musicData";
 const album = await getAlbum();
 ---
 
-<HTML>
+<HTML description="research + development @ ey3.tech. rust, svelte, python">
     <h1>thrzl</h1>
     <p>
         research + development @ <Link href="https://ey3.tech"
