--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -47,7 +47,7 @@ const projects = await getCollection("projects");
 // ];
 ---
 
-<HTML>
+<HTML title="my work" description="a collection of things i have created">
     <h1>featured projects</h1>
     {
         projects.map(({ data: project }) => (
